--- a/biodata.html
+++ b/biodata.html
@@ -5,7 +5,7 @@
 	</head>
 		<body>
 			<center>
-			<h1 class="text">Biodata</h1>
+			<h1 class="text">Biodataku</h1>
 		</center>
 			<form action="#" style="width: 500px"class="posisi";>
 			
